--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
                 <div class="col-md-12 text-center">
                     <div class="texts">
                       <h1 class="fs-1 fw-bold text-white">¡Hola!</h1>
+                      <p class="fs-3 fw-bolder text-white">
+                        <span class="typed"></span>
+                      </p>
+                    </div>
+                    <div id="texts" class="texts">
+                      <p class="fs-3 fw-bolder text-white">Me llamo <span class="text-warning">Cristian Barrios</span></p>
                       <p class="fs-3 fw-bolder text-white">Soy un <span class="text-warning">desarrollador web</span></p>
                     </div>
                     <div class="buttons">
@@ -330,5 +336,9 @@
 
       <!-- Bootstrap JS -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+      <!--CDN Libreria Typed.js -->
+      <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+      <!-- Main.js -->
+      <script src="assets/js/main.js"></script>
 </body>
 </html>
