--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 
+    <!-- CSS Styles -->
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
@@ -41,6 +42,10 @@
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#contact">Contacto</a>
+                  </li>
+                  <li class="nav-item form-check form-switch d-flex justify-content-center align-items-center gap-1">
+                      <input class="form-check-input" type="checkbox" role="switch" id="darkModeToggle">
+                      <label class="form-check-label nav-link" for="flexSwitchCheckDefault"><i class="bi bi-moon-stars-fill" id="icon"></i></label>
                   </li>
                 </ul>
               </div>
@@ -112,44 +117,44 @@
         <div class="row">
           <div class="container-skills d-flex justify-content-center align-items-center">
             <div class="row gap-3 justify-content-center">
-              <div class="col-3 col-lg-2 col-md-2 col-sm-3 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle">
+              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle">
                 <div class="skill-item">
                   <img src="assets/images/html.png" alt="HTML">
                 </div>
                 <div class="skill-name">
-                  <p class="fs-5 fw-semibold mt-1">HTML</p>
+                  <p class="fs-5 fw-semibold m-0">HTML</p>
                 </div>
               </div>
-              <div class="col-3 col-lg-2 col-md-2 col-sm-3 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle">
+              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle">
                 <div class="skill-item">
                   <img src="assets/images/css.png" alt="CSS">
                 </div>
                 <div class="skill-name">
-                  <p class="fs-5 fw-semibold mt-1">CSS</p>
+                  <p class="fs-5 fw-semibold m-0">CSS</p>
                 </div>
               </div>
-              <div class="col-3 col-lg-2 col-md-2 col-sm-3 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle">
+              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle">
                 <div class="skill-item">
                   <img src="assets/images/javascript.png" alt="Javascript">
                 </div>
                 <div class="skill-name">
-                  <p class="fs-5 fw-semibold mt-1">Javascript</p>
+                  <p class="fs-5 fw-semibold m-0">Javascript</p>
                 </div>
               </div>
-              <div class="col-3 col-lg-2 col-md-2 col-sm-3 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle">
+              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle">
                 <div class="skill-item">
                   <img src="assets/images/bootstrap.png" alt="Bootstrap">
                 </div>
                 <div class="skill-name">
-                  <p class="fs-5 fw-semibold mt-1">Bootstrap</p>
+                  <p class="fs-5 fw-semibold m-0">Bootstrap</p>
                 </div>
               </div>
-              <div class="col-3 col-lg-2 col-md-2 col-sm-3 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle">
+              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle">
                 <div class="skill-item">
                   <img src="assets/images/php.png" alt="PHP">
                 </div>
                 <div class="skill-name">
-                  <p class="fs-5 fw-semibold mt-1">PHP</p>
+                  <p class="fs-5 fw-semibold m-0">PHP</p>
                 </div>
               </div>
             </div>
@@ -302,7 +307,7 @@
             </div>
             <div class="row">
               <div class="col-md-12">
-                <div class="socials-content d-flex justify-content-center align-items-center gap-3">
+                <div class="socials-content d-flex justify-content-center align-items-center gap-3 text-dark">
                   <div class="social-item">
                     <a href="#"><i class="bi bi-github text-dark fs-1 me-1"></i></a>
                   </div>
@@ -340,5 +345,7 @@
       <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
       <!-- Main.js -->
       <script src="assets/js/main.js"></script>
+      <!-- Dark Mode -->
+      <script src="assets/js/dark-mode.js"></script>
 </body>
 </html>
