--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cristian Barrios</title>
     <link rel="shortcut icon" href="assets/images/maletin.png" type="image/x-icon">
+
     <!-- Bootstrap Styles -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
@@ -40,12 +41,14 @@
                   <li class="nav-item">
                     <a class="nav-link" href="#projects">Proyectos</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item me-3">
                     <a class="nav-link" href="#contact">Contacto</a>
                   </li>
-                  <li class="nav-item form-check form-switch d-flex justify-content-center align-items-center gap-1">
-                      <input class="form-check-input" type="checkbox" role="switch" id="darkModeToggle">
+                  <li class="nav-item">
+                    <div class="form-check form-switch d-flex justify-content-center align-items-center">
+                      <input class="form-check-input me-1" type="checkbox" role="switch" id="darkModeToggle">
                       <label class="form-check-label nav-link" for="flexSwitchCheckDefault"><i class="bi bi-moon-stars-fill" id="icon"></i></label>
+                    </div>
                   </li>
                 </ul>
               </div>
@@ -225,8 +228,8 @@
                       <h5 class="card-title">Proyecto</h5>
                       <div class="overlay">
                         <div class="buttons d-flex gap-2">
-                          <a href="#" class="btn btn-primary rounded-0">Codigo</a>
-                          <a href="#" class="btn btn-danger rounded-0">Ver proyecto</a>
+                          <a href="#" class="btn btn-primary rounded-0 fs-5">Codigo</a>
+                          <a href="#" class="btn btn-danger rounded-0 fs-5">Ver proyecto</a>
                         </div>
                       </div>
                     </div>
@@ -240,8 +243,8 @@
                     <h5 class="card-title">Proyecto</h5>
                     <div class="overlay">
                       <div class="buttons d-flex gap-2">
-                        <a href="#" class="btn btn-primary rounded-0">Codigo</a>
-                        <a href="#" class="btn btn-danger rounded-0">Ver proyecto</a>
+                        <a href="#" class="btn btn-primary rounded-0 fs-5">Codigo</a>
+                        <a href="#" class="btn btn-danger rounded-0 fs-5">Ver proyecto</a>
                       </div>
                     </div>
                   </div>
@@ -255,8 +258,8 @@
                     <h5 class="card-title">Proyecto</h5>
                     <div class="overlay">
                       <div class="buttons d-flex gap-2">
-                        <a href="#" class="btn btn-primary rounded-0">Codigo</a>
-                        <a href="#" class="btn btn-danger rounded-0">Ver proyecto</a>
+                        <a href="#" class="btn btn-primary rounded-0 fs-5">Codigo</a>
+                        <a href="#" class="btn btn-danger rounded-0 fs-5">Ver proyecto</a>
                       </div>
                     </div>
                   </div>
@@ -280,12 +283,15 @@
         <div class="row">
           <div class="col-md-12">
             <div class="form-contact d-flex justify-content-center align-items-center">
-              <form style="width: 25rem;">
+              <form id="form" action="https://formsubmit.co/barrioscristian.9908@gmail.com" method="POST" style="width: 25rem;">
+                <!-- Para evitar rellenar captcha -->
+                <input type="hidden" name="_captcha" value="false">
+                <input type="hidden" name="_subject" value="Nuevo mensaje">
                 <div class="mb-3 d-flex gap-2">
-                  <div class="col-lg-6">
+                  <div class="">
                     <input type="text" class="form-control form-control-lg fs-6 rounded-0" id="nombre" name="nombre" placeholder="Nombre">
                   </div>
-                  <div class="col-lg-6">
+                  <div class="">
                     <input type="text" class="form-control form-control-lg fs-6 rounded-0" id="asunto" name="asunto" placeholder="Asunto">
                   </div>
                 </div>
@@ -309,13 +315,13 @@
               <div class="col-md-12">
                 <div class="socials-content d-flex justify-content-center align-items-center gap-3 text-dark">
                   <div class="social-item">
-                    <a href="#"><i class="bi bi-github text-dark fs-1 me-1"></i></a>
+                    <a href="#"><i class="bi bi-github fs-1 me-1 text-dark"></i></a>
                   </div>
                   <div class="social-item">
-                    <a href="#"><i class="bi bi-linkedin text-dark fs-1 me-1"></i></a>
+                    <a href="#"><i class="bi bi-linkedin fs-1 me-1 text-dark"></i></a>
                   </div>
                   <div class="social-item">
-                    <a href="#"><i class="bi bi-whatsapp text-dark fs-1 me-1"></i></a>
+                    <a href="#"><i class="bi bi-whatsapp fs-1 me-1 text-dark"></i></a>
                   </div>
                 </div>
               </div>
@@ -347,5 +353,7 @@
       <script src="assets/js/main.js"></script>
       <!-- Dark Mode -->
       <script src="assets/js/dark-mode.js"></script>
+      <!-- Form.js -->
+      <script src="assets/js/form.js"></script>
 </body>
 </html>
