--- a/index.html
+++ b/index.html
@@ -220,8 +220,9 @@
             </div>
           </div>
         </div>
-        <div class="row">
-            <div class="col-md-4 mb-4">
+        <div class="row" id="proyectos">
+            <!-- Card de proyecto -->
+            <!-- <div class="col-md-4 mb-4">
                 <div class="card rounded-0 position-relative">
                     <img src="assets/images/astronauta.jpg" class="card-img-top rounded-0" alt="...">
                     <div class="card-body">
@@ -234,37 +235,8 @@
                       </div>
                     </div>
                   </div>
-            </div>
-
-            <div class="col-md-4 mb-4">
-              <div class="card rounded-0 position-relative">
-                  <img src="assets/images/astronauta.jpg" class="card-img-top rounded-0" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Proyecto</h5>
-                    <div class="overlay">
-                      <div class="buttons d-flex gap-2">
-                        <a href="#" class="btn btn-primary rounded-0 fs-5">Codigo</a>
-                        <a href="#" class="btn btn-danger rounded-0 fs-5">Ver proyecto</a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-            </div>
-
-            <div class="col-md-4 mb-4">
-              <div class="card rounded-0 position-relative">
-                  <img src="assets/images/astronauta.jpg" class="card-img-top rounded-0" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Proyecto</h5>
-                    <div class="overlay">
-                      <div class="buttons d-flex gap-2">
-                        <a href="#" class="btn btn-primary rounded-0 fs-5">Codigo</a>
-                        <a href="#" class="btn btn-danger rounded-0 fs-5">Ver proyecto</a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-            </div>
+            </div> -->
+            <!-- Fin card de proyecto -->
 
         </div>
 
@@ -354,6 +326,6 @@
       <!-- Dark Mode -->
       <script src="assets/js/dark-mode.js"></script>
       <!-- Form.js -->
-      <script src="assets/js/form.js"></script>
+      <script src="assets/js/proyectos.js"></script>
 </body>
 </html>
