--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 
+    <!-- CSS AOS - Animar Scroll -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <!-- CSS Styles -->
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
     
     <header>
-        <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-lg bg-dark navbar-dark" id="nav">
             <div class="container">
               <a class="navbar-brand" href="#">Mi portafolio</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -86,23 +89,23 @@
         <div class="row">
           <!-- Contenedor de la foto -->
           <div class="col-md-6 d-flex justify-content-center align-items-center mb-5">
-            <div class="foto-container">
+            <div class="foto-container" data-aos="fade-up">
               <img src="assets/images/astronauta.jpg" alt="" class="img-fluid">
               <div class="overlay-socials">
-                <a href="#" class="nav-link"><i class="bi bi-github fs-3"></i></a>
-                <a href="#" class="nav-link"><i class="bi bi-linkedin fs-3"></i></a>
-                <a href="#" class="nav-link"><i class="bi bi-whatsapp fs-3"></i></a>
+                <a href="#" class="nav-link"><i class="bi bi-github fs-2"></i></a>
+                <a href="#" class="nav-link"><i class="bi bi-linkedin fs-2"></i></a>
+                <a href="#" class="nav-link"><i class="bi bi-whatsapp fs-2"></i></a>
               </div>
             </div>
           </div>
           <!-- Contenedor de la descripción -->
           <div class="col-md-6 d-flex justify-content-center align-items-center flex-column">
-            <div class="descripcion-container text-center text-md-start">
+            <div class="descripcion-container text-center text-md-start" data-aos="fade-up">
               <h2 class="fw-bold">Un poco sobre mi...</h2>
               <p class="text-muted">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem ducimus, velit et unde ad blanditiis est vel officiis distinctio obcaecati alias debitis omnis cum, quidem nam eius assumenda. Id, inventore!.</p>
             </div>
           <div class="row">
-              <div class="col-lg-12">
+              <div class="col-lg-12" data-aos="fade-up">
                 <a href="assets/files/curriculum.pdf" target="_blank" class="btn btn-danger fs-5 rounded-0 me-3">Descargar CV</a>
               </div>
           </div>
@@ -117,7 +120,7 @@
       <div class="container-lg">
         <div class="row justify-content-center">
           <div class="col-lg-8">
-            <div class="section-title text-center">
+            <div class="section-title text-center" data-aos="fade-up">
               <h2 class="fw-bold mb-5">Habilidades</h2>
             </div>
           </div>
@@ -125,7 +128,7 @@
         <div class="row">
           <div class="container-skills d-flex justify-content-center align-items-center">
             <div class="row gap-3 justify-content-center">
-              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle">
+              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle" data-aos="fade-up">
                 <div class="skill-item">
                   <img src="assets/images/html.png" alt="HTML">
                 </div>
@@ -133,7 +136,7 @@
                   <p class="fs-5 fw-semibold m-0">HTML</p>
                 </div>
               </div>
-              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle">
+              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle" data-aos="fade-up">
                 <div class="skill-item">
                   <img src="assets/images/css.png" alt="CSS">
                 </div>
@@ -141,7 +144,7 @@
                   <p class="fs-5 fw-semibold m-0">CSS</p>
                 </div>
               </div>
-              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle">
+              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle" data-aos="fade-up">
                 <div class="skill-item">
                   <img src="assets/images/javascript.png" alt="Javascript">
                 </div>
@@ -149,7 +152,7 @@
                   <p class="fs-5 fw-semibold m-0">Javascript</p>
                 </div>
               </div>
-              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle">
+              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle" data-aos="fade-up">
                 <div class="skill-item">
                   <img src="assets/images/bootstrap.png" alt="Bootstrap">
                 </div>
@@ -157,7 +160,7 @@
                   <p class="fs-5 fw-semibold m-0">Bootstrap</p>
                 </div>
               </div>
-              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle">
+              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle" data-aos="fade-up">
                 <div class="skill-item">
                   <img src="assets/images/php.png" alt="PHP">
                 </div>
@@ -176,13 +179,13 @@
       <div class="container-lg py-4">
         <div class="row justify-content-center">
           <div class="col-lg-8">
-            <div class="section-title text-center">
+            <div class="section-title text-center" data-aos="fade-up">
               <h2 class=" fw-bold mb-5">Que es lo que hago?</h2>
             </div>
           </div>
         </div>
         <div class="row text-center">
-          <div class="col-md-6 col-lg-4 mb-4">
+          <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up">
             <div class="service-item py-4 rounded-0 border bg-secondary-subtle">
               <div class="icon my-3 text-danger fs-2">
                 <i class="bi bi-code-slash"></i>
@@ -192,7 +195,7 @@
             </div>
           </div>
 
-          <div class="col-md-6 col-lg-4 mb-4">
+          <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up">
             <div class="service-item py-4 rounded-0 border bg-secondary-subtle">
               <div class="icon my-3 text-danger fs-2">
                 <i class="bi bi-brush"></i>
@@ -202,7 +205,7 @@
             </div>
           </div>
 
-          <div class="col-md-6 col-lg-4 mb-4">
+          <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up">
             <div class="service-item py-4 rounded-0 border bg-secondary-subtle">
               <div class="icon my-3 text-danger fs-2">
                 <i class="bi bi-gear"></i>
@@ -220,7 +223,7 @@
     <section id="projects" class="container-lg">
         <div class="row justify-content-center">
           <div class="col-lg-8">
-            <div class="section-title text-center">
+            <div class="section-title text-center" data-aos="fade-up">
               <h2 class="fw-bold mb-5">Proyectos</h2>
             </div>
           </div>
@@ -238,7 +241,7 @@
       <div class="container-lg">
         <div class="row justify-content-center">
           <div class="col-lg-8">
-            <div class="section-title text-center">
+            <div class="section-title text-center" data-aos="fade-up">
               <h2 class="fw-bold mb-5">Contactame</h2>
             </div>
           </div>
@@ -251,43 +254,45 @@
                 <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_subject" value="Nuevo mensaje">
                 <div class="mb-3 d-flex gap-2">
-                  <div class="">
+                  <div class="" data-aos="fade-up">
                     <input type="text" class="form-control form-control-lg fs-6 rounded-0" id="nombre" name="nombre" placeholder="Nombre" required>
                     <div class="invalid-feedback">
                       El campo no pueden estar vacios
                     </div>
                   </div>
-                  <div class="">
+                  <div class="" data-aos="fade-up">
                     <input type="text" class="form-control form-control-lg fs-6 rounded-0" id="asunto" name="asunto" placeholder="Asunto" required>
                     <div class="invalid-feedback">
                       El campo no pueden estar vacios
                     </div>
                   </div>
                 </div>
-                <div class="mb-3">
+                <div class="mb-3" data-aos="fade-up">
                   <input type="email" class="form-control form-control-lg fs-6 rounded-0" id="email" name="email" placeholder="Correo electronico" required>
                   <div class="invalid-feedback">
                     Ingrese un correo por favor
                   </div>
                 </div>
-                <div class="mb-3">
+                <div class="mb-3" data-aos="fade-up">
                   <textarea name="mensaje" id="mensaje" cols="30" rows="10" class="form-control form-control-lg fs-6 rounded-0" placeholder="Deje su mensaje aqui..." required></textarea>
                   <div class="invalid-feedback">
                     Debe escribir un mensaje
                   </div>
                 </div>
-                <button type="submit" class="btn btn-primary fs-5 rounded-0 d-block w-100">Enviar mensaje</button>
+                <div class="mb-3" data-aos="fade-up">
+                  <button type="submit" class="btn btn-primary fs-5 rounded-0 d-block w-100">Enviar mensaje</button>
+                </div>
               </form>
             </div>
             <div class="row justify-content-center mt-5">
               <div class="col-lg-8">
-                <div class="section-title text-center">
+                <div class="section-title text-center" data-aos="fade-up">
                   <h5 class="fw-bold mb-2">Tambien me puedes contactar por:</h5>
                 </div>
               </div>
             </div>
             <div class="row">
-              <div class="col-md-12">
+              <div class="col-md-12" data-aos="fade-up">
                 <div class="socials-content d-flex justify-content-center align-items-center gap-3 text-dark">
                   <div class="social-item">
                     <a href="#" class="nav-link"><i class="bi bi-github fs-1 me-1"></i></a>
@@ -328,9 +333,20 @@
       <script src="assets/js/main.js"></script>
       <!-- Dark Mode -->
       <script src="assets/js/dark-mode.js"></script>
+      <!-- Nav.js -->
+      <script src="assets/js/nav.js"></script>
       <!-- Proyectos.js -->
       <script src="assets/js/proyectos.js"></script>
       <!-- Bootstrap-validation.js -->
       <script src="assets/js/bootstrap-validation.js"></script>
+      <!-- Script animar scroll -->
+      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+      <!-- Metodo para arrancar las animaciones -->
+      <script>
+        AOS.init({
+          //para la duracion de la animacion
+          duration: 1000
+        });
+      </script>
 </body>
 </html>
