--- a/index.html
+++ b/index.html
@@ -128,44 +128,44 @@
         <div class="row">
           <div class="container-skills d-flex justify-content-center align-items-center">
             <div class="row gap-3 justify-content-center">
-              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle" data-aos="fade-up">
+              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle skill" data-aos="fade-up">
                 <div class="skill-item">
                   <img src="assets/images/html.png" alt="HTML">
                 </div>
                 <div class="skill-name">
-                  <p class="fs-5 fw-semibold m-0">HTML</p>
+                  <h3 class="fs-5 m-0 mt-1">HTML</h3>
                 </div>
               </div>
-              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle" data-aos="fade-up">
+              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle skill" data-aos="fade-up">
                 <div class="skill-item">
                   <img src="assets/images/css.png" alt="CSS">
                 </div>
                 <div class="skill-name">
-                  <p class="fs-5 fw-semibold m-0">CSS</p>
+                  <h3 class="fs-5 m-0 mt-1">CSS</h3>
                 </div>
               </div>
-              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle" data-aos="fade-up">
+              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle skill" data-aos="fade-up">
                 <div class="skill-item">
                   <img src="assets/images/javascript.png" alt="Javascript">
                 </div>
                 <div class="skill-name">
-                  <p class="fs-5 fw-semibold m-0">Javascript</p>
+                  <h3 class="fs-5 m-0 mt-1">Javascript</h3>
                 </div>
               </div>
-              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle" data-aos="fade-up">
+              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle skill" data-aos="fade-up">
                 <div class="skill-item">
                   <img src="assets/images/bootstrap.png" alt="Bootstrap">
                 </div>
                 <div class="skill-name">
-                  <p class="fs-5 fw-semibold m-0">Bootstrap</p>
+                  <h3 class="fs-5 m-0 mt-1">Bootstrap</h3>
                 </div>
               </div>
-              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle" data-aos="fade-up">
+              <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle skill" data-aos="fade-up">
                 <div class="skill-item">
                   <img src="assets/images/php.png" alt="PHP">
                 </div>
                 <div class="skill-name">
-                  <p class="fs-5 fw-semibold m-0">PHP</p>
+                  <h3 class="fs-5 m-0 mt-1">PHP</h3>
                 </div>
               </div>
             </div>
@@ -191,7 +191,7 @@
                 <i class="bi bi-code-slash"></i>
               </div>
               <h3 class="fs-3 py-2">Desarrollo Web</h3>
-              <p class="text-muted">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente, numquam.</p>
+              <p class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente, numquam.</p>
             </div>
           </div>
 
@@ -201,7 +201,7 @@
                 <i class="bi bi-brush"></i>
               </div>
               <h3 class="fs-3 py-2">Diseños creativos</h3>
-              <p class="text-muted">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente, numquam.</p>
+              <p class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente, numquam.</p>
             </div>
           </div>
 
@@ -211,7 +211,7 @@
                 <i class="bi bi-gear"></i>
               </div>
               <h3 class="fs-3 py-2">Mantenimiento Web</h3>
-              <p class="text-muted">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente, numquam.</p>
+              <p class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente, numquam.</p>
             </div>
           </div>
         </div>
