--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
             <div class="row gap-3 justify-content-center">
               <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle skill" data-aos="fade-up">
                 <div class="skill-item">
-                  <img src="assets/images/html.png" alt="HTML">
+                  <!-- <img src="assets/images/html.png" alt="HTML"> -->
+                  <i class="fa-brands fa-html5 display-2"></i>
                 </div>
                 <div class="skill-name">
                   <h3 class="fs-5 m-0 mt-1">HTML</h3>
@@ -138,7 +139,8 @@
               </div>
               <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle skill" data-aos="fade-up">
                 <div class="skill-item">
-                  <img src="assets/images/css.png" alt="CSS">
+                  <!-- <img src="assets/images/css.png" alt="CSS"> -->
+                  <i class="fa-brands fa-css3-alt display-2"></i>
                 </div>
                 <div class="skill-name">
                   <h3 class="fs-5 m-0 mt-1">CSS</h3>
@@ -146,7 +148,8 @@
               </div>
               <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle skill" data-aos="fade-up">
                 <div class="skill-item">
-                  <img src="assets/images/javascript.png" alt="Javascript">
+                  <!-- <img src="assets/images/javascript.png" alt="Javascript"> -->
+                  <i class="fa-brands fa-js display-2"></i>
                 </div>
                 <div class="skill-name">
                   <h3 class="fs-5 m-0 mt-1">Javascript</h3>
@@ -154,7 +157,8 @@
               </div>
               <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle skill" data-aos="fade-up">
                 <div class="skill-item">
-                  <img src="assets/images/bootstrap.png" alt="Bootstrap">
+                  <!-- <img src="assets/images/bootstrap.png" alt="Bootstrap"> -->
+                  <i class="fa-brands fa-bootstrap display-2"></i>
                 </div>
                 <div class="skill-name">
                   <h3 class="fs-5 m-0 mt-1">Bootstrap</h3>
@@ -162,7 +166,8 @@
               </div>
               <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle skill" data-aos="fade-up">
                 <div class="skill-item">
-                  <img src="assets/images/php.png" alt="PHP">
+                  <!-- <img src="assets/images/php.png" alt="PHP"> -->
+                  <i class="fa-brands fa-php display-2"></i>
                 </div>
                 <div class="skill-name">
                   <h3 class="fs-5 m-0 mt-1">PHP</h3>
@@ -175,7 +180,7 @@
     </section>
 
     <!-- Seccion servicios -->
-    <section class="services py-5" id="services">
+    <section class="services py-5 px-2" id="services">
       <div class="container-lg py-4">
         <div class="row justify-content-center">
           <div class="col-lg-8">
@@ -186,32 +191,32 @@
         </div>
         <div class="row text-center">
           <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up">
-            <div class="service-item py-4 rounded-0 border bg-secondary-subtle">
-              <div class="icon my-3 text-danger fs-2">
+            <div class="service-item py-4 rounded-0 bg-secondary-subtle">
+              <div class="icon my-3 fs-2">
                 <i class="bi bi-code-slash"></i>
               </div>
               <h3 class="fs-3 py-2">Desarrollo Web</h3>
-              <p class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente, numquam.</p>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente, numquam.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up">
-            <div class="service-item py-4 rounded-0 border bg-secondary-subtle">
-              <div class="icon my-3 text-danger fs-2">
+            <div class="service-item py-4 rounded-0 bg-secondary-subtle">
+              <div class="icon my-3 fs-2">
                 <i class="bi bi-brush"></i>
               </div>
               <h3 class="fs-3 py-2">Diseños creativos</h3>
-              <p class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente, numquam.</p>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente, numquam.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up">
-            <div class="service-item py-4 rounded-0 border bg-secondary-subtle">
-              <div class="icon my-3 text-danger fs-2">
+            <div class="service-item py-4 rounded-0 bg-secondary-subtle">
+              <div class="icon my-3 fs-2">
                 <i class="bi bi-gear"></i>
               </div>
               <h3 class="fs-3 py-2">Mantenimiento Web</h3>
-              <p class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente, numquam.</p>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente, numquam.</p>
             </div>
           </div>
         </div>
@@ -255,26 +260,26 @@
                 <input type="hidden" name="_subject" value="Nuevo mensaje">
                 <div class="mb-3 d-flex gap-2">
                   <div class="" data-aos="fade-up">
-                    <input type="text" class="form-control form-control-lg fs-6 rounded-0" id="nombre" name="nombre" placeholder="Nombre" required>
+                    <input type="text" class="form-control form-control-lg fs-6 rounded-0 border-secondary-subtle" id="nombre" name="nombre" placeholder="Nombre" required>
                     <div class="invalid-feedback">
                       El campo no pueden estar vacios
                     </div>
                   </div>
                   <div class="" data-aos="fade-up">
-                    <input type="text" class="form-control form-control-lg fs-6 rounded-0" id="asunto" name="asunto" placeholder="Asunto" required>
+                    <input type="text" class="form-control form-control-lg fs-6 rounded-0 border-secondary-subtle" id="asunto" name="asunto" placeholder="Asunto" required>
                     <div class="invalid-feedback">
                       El campo no pueden estar vacios
                     </div>
                   </div>
                 </div>
                 <div class="mb-3" data-aos="fade-up">
-                  <input type="email" class="form-control form-control-lg fs-6 rounded-0" id="email" name="email" placeholder="Correo electronico" required>
+                  <input type="email" class="form-control form-control-lg fs-6 rounded-0 border-secondary-subtle" id="email" name="email" placeholder="Correo electronico" required>
                   <div class="invalid-feedback">
                     Ingrese un correo por favor
                   </div>
                 </div>
                 <div class="mb-3" data-aos="fade-up">
-                  <textarea name="mensaje" id="mensaje" cols="30" rows="10" class="form-control form-control-lg fs-6 rounded-0" placeholder="Deje su mensaje aqui..." required></textarea>
+                  <textarea name="mensaje" id="mensaje" cols="30" rows="10" class="form-control form-control-lg fs-6 rounded-0 border-secondary-subtle" placeholder="Deje su mensaje aqui..." required></textarea>
                   <div class="invalid-feedback">
                     Debe escribir un mensaje
                   </div>
@@ -348,5 +353,7 @@
           duration: 1000
         });
       </script>
+      <!-- Font-Awesome -->
+      <script src="https://kit.fontawesome.com/45fc83ca5a.js" crossorigin="anonymous"></script>
 </body>
 </html>
