cambie los enlaces de las fuentes porque no estaban bien y no cargaban

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                       <p class="fs-3 fw-bolder text-white">Me llamo <span class="text-warning">Cristian Barrios</span></p>
                       <p class="fs-3 fw-bolder text-white">Soy un <span class="text-warning">desarrollador web</span></p>
                     </div>
-                    <div class="buttons">
-                      <a href="#projects" class="btn btn-danger fs-5 rounded-0 me-3">Mis proyectos</a>
+                    <div class="buttons d-flex justify-content-center flex-column flex-md-row gap-2">
+                      <a href="#projects" class="btn btn-danger fs-5 rounded-0">Mis proyectos</a>
                       <a href="#contact" class="btn btn-primary fs-5 rounded-0">Contactame</a>
                     </div>
                 </div>
@@ -130,7 +130,6 @@
             <div class="row gap-3 justify-content-center">
               <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle skill" data-aos="fade-up">
                 <div class="skill-item">
-                  <!-- <img src="assets/images/html.png" alt="HTML"> -->
                   <i class="fa-brands fa-html5 display-2"></i>
                 </div>
                 <div class="skill-name">
@@ -139,7 +138,6 @@
               </div>
               <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle skill" data-aos="fade-up">
                 <div class="skill-item">
-                  <!-- <img src="assets/images/css.png" alt="CSS"> -->
                   <i class="fa-brands fa-css3-alt display-2"></i>
                 </div>
                 <div class="skill-name">
@@ -148,7 +146,6 @@
               </div>
               <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle skill" data-aos="fade-up">
                 <div class="skill-item">
-                  <!-- <img src="assets/images/javascript.png" alt="Javascript"> -->
                   <i class="fa-brands fa-js display-2"></i>
                 </div>
                 <div class="skill-name">
@@ -157,7 +154,6 @@
               </div>
               <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle skill" data-aos="fade-up">
                 <div class="skill-item">
-                  <!-- <img src="assets/images/bootstrap.png" alt="Bootstrap"> -->
                   <i class="fa-brands fa-bootstrap display-2"></i>
                 </div>
                 <div class="skill-name">
@@ -166,7 +162,6 @@
               </div>
               <div class="col-4 col-lg-2 col-md-2 col-sm-4 d-flex justify-content-center align-items-center flex-column p-3 bg-secondary-subtle skill" data-aos="fade-up">
                 <div class="skill-item">
-                  <!-- <img src="assets/images/php.png" alt="PHP"> -->
                   <i class="fa-brands fa-php display-2"></i>
                 </div>
                 <div class="skill-name">
@@ -189,9 +184,9 @@
             </div>
           </div>
         </div>
-        <div class="row text-center">
+        <div class="row text-center justify-content-center">
           <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up">
-            <div class="service-item py-4 rounded-0 bg-secondary-subtle">
+            <div class="service-item p-4 rounded-0 bg-secondary-subtle">
               <div class="icon my-3 fs-2">
                 <i class="bi bi-code-slash"></i>
               </div>
@@ -201,7 +196,7 @@
           </div>
 
           <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up">
-            <div class="service-item py-4 rounded-0 bg-secondary-subtle">
+            <div class="service-item p-4 rounded-0 bg-secondary-subtle">
               <div class="icon my-3 fs-2">
                 <i class="bi bi-brush"></i>
               </div>
@@ -211,7 +206,7 @@
           </div>
 
           <div class="col-md-6 col-lg-4 mb-4" data-aos="fade-up">
-            <div class="service-item py-4 rounded-0 bg-secondary-subtle">
+            <div class="service-item p-4 rounded-0 bg-secondary-subtle">
               <div class="icon my-3 fs-2">
                 <i class="bi bi-gear"></i>
               </div>
